# polytoria_ripoff

./: Cargo.toml  idunno.txt  idunno.txt.pub  ufwer.txt  ufwer.txt.pub
DefaultParts/: lowPolyBunny.glb
src/: game_engine.rs  main.rs
src/Shaders/: defaultfragment.glsl  defaultvertex.glsl
src/custom/: mod.rs
