[package]
name = "polytoria_ripoff"
version = "0.1.0"
edition = "2024"

[dependencies]
egui-dropdown = "0.14.0"
rand = "0.10.0"
reqwest = "0.13.2"
rfd = "0.17.2"
three-d = { version = "0.18.2", features = ["egui-gui"] }
three-d-asset = { version = "0.9.2", features = ["gltf", "image", "obj", "reqwest", "wavefront_obj"] }
tokio = { version = "1.49.0", features = ["tokio-macros", "rt-multi-thread", "macros"] }
